Thu Dec 20 14:46:33 GMT 2001  Olly Betts <olly@survex.com>

	* Document xDB, xDAYSMINUS, xDATE1, xDATE2, xB.

Thu Dec 20 12:55:29 GMT 2001  Olly Betts <olly@survex.com>

	* Use double quotes on parameters to <BODY>.

Mon Dec 17 15:01:43 GMT 2001  Olly Betts <olly@survex.com>

	* Get rid of whitespace between hundreds and tens image in page
	  links.

Fri Dec 14 17:26:48 GMT 2001  Olly Betts <olly@survex.com>

	* Force first page of hits if DB, DEFAULTOP, B, DAYSMINUS, DATE1,
	  or DATE2 changes; also clear relevance judgements if DB changes.

Fri Dec 14 16:21:07 GMT 2001  Olly Betts <olly@survex.com>

	* Removed restriction on minimum page size (was 10) - for a shopping
	  type application with images next to each hit, 5 or fewer per page
	  might be reasonable; even one result per page makes sense for some
	  applications.

Fri Dec 14 15:37:20 GMT 2001  Olly Betts <olly@survex.com>

	* Added $error to make nicer error reporting possible.

Fri Dec 14 14:49:18 GMT 2001  Olly Betts <olly@survex.com>

	* Give more helpful messages for query syntax errors in cases where
	  we can without elaborate YACC hackery.

Thu Dec 13 15:10:24 GMT 2001  Olly Betts <olly@survex.com>

	* For image page buttons, display pages 10-999 by using 2 or 3 images.

Thu Dec 13 15:02:16 GMT 2001  Olly Betts <olly@survex.com>

	* New operators: $div{}, $mod{}, $mul{}, $sub{}, $ge{}, $gt{}, $le{},
	  $lt{}.

Wed Dec 12 16:37:47 GMT 2001  Olly Betts <olly@survex.com>

	* Updated omegascript documentation.

Wed Dec 12 15:43:19 GMT 2001  Olly Betts <olly@survex.com>

	* Fixed TOPDOC clipping.

Wed Dec 12 15:36:20 GMT 2001  Olly Betts <olly@survex.com>

	* templates/query: Fixed typo which caused "..." to appear after
	  page buttons when it wasn't appropriate.

Wed Dec 12 15:11:23 GMT 2001  Olly Betts <olly@survex.com>

	* omega: Added stopword list (still hardcoded at present though).

Wed Dec 12 12:46:57 GMT 2001  Olly Betts <olly@survex.com>
