@@ -102,6 +102,18 @@ of the form '[ 3 ]', which looks nice in lynx, for tooltips, and so
 on. For text-only links, you really need to write out the entire GET
 parameters and use a normal anchor.
 
+Match Bias Functor
+------------------
+
+Note: this is a temporary bodge to allow experimentation with OmBiasFunctor.
+
+bias_weight
+	if set, enable the OmBiasFunctor with max_weight "bias_weight".
+
+bias_halflife
+	optionally set the halflife of the bias (default is 2 days).  Has no
+	effect unless bias_weight is also set.
+
 Modification of CGI parameters
 ------------------------------
 
